Update application configuration and product retrieval logic
- Set `ASPNETCORE_ENVIRONMENT` to `Development` in Dockerfile.
- Updated `ListAsync` method in `IProductService` to accept an optional `search` parameter.
- Simplified `GlobalExceptionHandler` to always include detailed exception information.
- Modified `Program.cs` to register `GlobalExceptionHandler` and update CORS policy.
- Added database migration step during application startup.
- Changed MySQL connection string in `appsettings.json` to use environment variables for enhanced security.
- Updated `DependencyInjection.cs` to register database context with environment variables and added error handling.
- Adjusted `ProductService` to utilize new `ProductListSpecification` for flexible product listing.

--- a/ProductsMicroService.API/Dockerfile
+++ b/ProductsMicroService.API/Dockerfile
@@ -27,4 +27,5 @@ RUN dotnet publish "./ProductsMicroService.API.csproj" -c $BUILD_CONFIGURATION -
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+ENV ASPNETCORE_ENVIRONMENT=Development
 ENTRYPOINT ["dotnet", "ProductsMicroService.API.dll"]
