--- a/ProductsMicroService.API/appsettings.json
+++ b/ProductsMicroService.API/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MySqlDb": "server=localhost;port=3306;database=ecommerceproductsdatabase;user=root;password=123456;"
+    "MySqlDb": "server=$MYSQL_HOST;port=3306;database=ecommerceproductsdatabase;user=root;password=$MYSQL_PASSWORD;"
   }
 }
